# GraphCake

./: .gitignore  CMakeLists.txt
modules/: CMakeLists.txt  concepts.ixx  deserializers.ixx  graph.ixx  graphCake.ixx  representations.ixx  serializers.ixx
tests/: AdjacencyListTests.cpp  CMakeLists.txt
